packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_use_client_effect.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
expression: output
---
==INPUT==


import { component$, useBrowserVisibleTask$, useStore, useStyles$ } from '@decoration/qwik';

export const Child = component$(() => {
    const state = useStore({
        count: 0
    });

    // Double count watch
    useBrowserVisibleTask$(() => {
        const timer = setInterval(() => {
        state.count++;
        }, 1000);
        return () => {
        clearInterval(timer);
        }
    });

    return (
        <div>
        {state.count}
    </div>
    );
});


============================= child_component_usebrowservisibletask_0igfpoyjmqa.js (ENTRY POINT)==

import { useLexicalScope } from "@decoration/qwik";
export const Child_component_useBrowserVisibleTask_0IGFPOyJmQA = ()=>{
    const [state] = useLexicalScope("Child_component_useBrowserVisibleTask_0IGFPOyJmQA");
    const timer = setInterval(()=>{
        state.count++;
    }, 1000);
    return ()=>{
        clearInterval(timer);
    };
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";iEAS2B;;IACnB,MAAM,QAAQ,YAAY,IAAM;QAChC,MAAM,KAAK;IACX,GAAG;IACH,OAAO,IAAM;QACb,cAAc;IACd\"}")
/*
{
  "origin": "test.tsx",
  "name": "Child_component_useBrowserVisibleTask_0IGFPOyJmQA",
  "entry": null,
  "displayName": "Child_component_useBrowserVisibleTask",
  "hash": "0IGFPOyJmQA",
  "canonicalFilename": "child_component_usebrowservisibletask_0igfpoyjmqa",
  "extension": "js",
  "parent": "Child_component_9GyF01GDKqw",
  "ctxKind": "function",
  "ctxName": "useBrowserVisibleTask$",
  "captures": true,
  "loc": [
    244,
    403
  ]
}
*/
============================= test.js ==

import { componentQrl } from "@decoration/qwik";
import { qrl } from "@decoration/qwik";
export const Child = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(()=>import("./child_component_9gyf01gdkqw"), "Child_component_9GyF01GDKqw"));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;AAGA,OAAO,MAAM,sBAAQ,4GAoBlB\"}")
============================= child_component_9gyf01gdkqw.js (ENTRY POINT)==

import { _fnSignal } from "@decoration/qwik";
import { _jsxQ } from "@decoration/qwik";
import { qrl } from "@decoration/qwik";
import { useBrowserVisibleTaskQrl } from "@decoration/qwik";
import { useStore } from "@decoration/qwik";
export const Child_component_9GyF01GDKqw = ()=>{
    const state = useStore({
        count: 0
    });
    // Double count watch
    useBrowserVisibleTaskQrl(/*#__PURE__*/ qrl(()=>import("./child_component_usebrowservisibletask_0igfpoyjmqa"), "Child_component_useBrowserVisibleTask_0IGFPOyJmQA", [
        state
    ]));
    return /*#__PURE__*/ _jsxQ("div", null, null, _fnSignal((p0)=>p0.count, [
        state
    ], "p0.count"), 3, "u6_0");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;2CAGgC,IAAM;IAClC,MAAM,QAAQ,SAAS;QACnB,OAAO;IACX;IAEA,qBAAqB;IACrB;;;IASA,qBACI,MAAC,mCACA,GAAM,KAAK;;;AAGpB\"}")
/*
{
  "origin": "test.tsx",
  "name": "Child_component_9GyF01GDKqw",
  "entry": null,
  "displayName": "Child_component",
  "hash": "9GyF01GDKqw",
  "canonicalFilename": "child_component_9gyf01gdkqw",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    128,
    475
  ]
}
*/
== DIAGNOSTICS ==

[]
