packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_use_server_mount.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
expression: output
---
==INPUT==


import { component$, useServerMount$, useStore, useStyles$ } from '@decoration/qwik';
import mongo from 'mongodb';
import redis from 'redis';

export const Parent = component$(() => {
    const state = useStore({
        text: ''
    });

    // Double count watch
    useServerMount$(async () => {
        state.text = await mongo.users();
        redis.set(state.text);
    });

    return (
        <div onClick$={() => console.log('parent')}>
            {state.text}
        </div>
    );
});

export const Child = component$(() => {
    const state = useStore({
        text: ''
    });

    // Double count watch
    useServerMount$(async () => {
        state.text = await mongo.users();
    });

    return (
        <div onClick$={() => console.log('child')}>
            {state.text}
        </div>
    );
});

============================= test.js ==

import { componentQrl } from "@decoration/qwik";
import { qrl } from "@decoration/qwik";
export const Parent = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(()=>import("./entry_Parent"), "Parent_component_0TaiDayHrlo"));
export const Child = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(()=>import("./entry_Child"), "Child_component_9GyF01GDKqw"));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;AAKA,OAAO,MAAM,uBAAS,8FAgBnB;AAEH,OAAO,MAAM,sBAAQ,4FAelB\"}")
============================= parent_component_0taidayhrlo.js ==

import { _fnSignal } from "@decoration/qwik";
import { _jsxQ } from "@decoration/qwik";
import { qrl } from "@decoration/qwik";
import { useServerMountQrl } from "@decoration/qwik";
import { useStore } from "@decoration/qwik";
export const Parent_component_0TaiDayHrlo = ()=>{
    const state = useStore({
        text: ''
    });
    // Double count watch
    useServerMountQrl(/*#__PURE__*/ qrl(()=>import("./entry_server"), "Parent_component_useServerMount_cQrQm0HrrM8", [
        state
    ]));
    return /*#__PURE__*/ _jsxQ("div", null, {
        onClick$: /*#__PURE__*/ qrl(()=>import("./parent_component_div_onclick_c5xe49nqd3a"), "Parent_component_div_onClick_C5XE49Nqd3A")
    }, _fnSignal((p0)=>p0.text, [
        state
    ], "p0.text"), 3, "u6_0");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;4CAKiC,IAAM;IACnC,MAAM,QAAQ,SAAS;QACnB,MAAM;IACV;IAEA,qBAAqB;IACrB;;;IAKA,qBACI,MAAC;QAAI,QAAQ;uBACR,GAAM,IAAI;;;AAGvB\"}")
/*
{
  "origin": "test.tsx",
  "name": "Parent_component_0TaiDayHrlo",
  "entry": "entry_Parent",
  "displayName": "Parent_component",
  "hash": "0TaiDayHrlo",
  "canonicalFilename": "parent_component_0taidayhrlo",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    178,
    497
  ]
}
*/
============================= child_component_useservermount_lne1dxu8z28.js ==

import { useLexicalScope } from "@decoration/qwik";
import mongo from "mongodb";
export const Child_component_useServerMount_lnE1dxU8z28 = async ()=>{
    const [state] = useLexicalScope("Child_component_useServerMount_lnE1dxU8z28");
    state.text = await mongo.users();
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;0DA6BoB;;IACZ,MAAM,IAAI,GAAG,MAAM,MAAM,KAAK\"}")
/*
{
  "origin": "test.tsx",
  "name": "Child_component_useServerMount_lnE1dxU8z28",
  "entry": "entry_server",
  "displayName": "Child_component_useServerMount",
  "hash": "lnE1dxU8z28",
  "canonicalFilename": "child_component_useservermount_lne1dxu8z28",
  "extension": "js",
  "parent": "Child_component_9GyF01GDKqw",
  "ctxKind": "function",
  "ctxName": "useServerMount$",
  "captures": true,
  "loc": [
    642,
    703
  ]
}
*/
============================= parent_component_div_onclick_c5xe49nqd3a.js (ENTRY POINT)==

export const Parent_component_div_onClick_C5XE49Nqd3A = ()=>console.log('parent');


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"wDAiBuB,IAAM,QAAQ,GAAG,CAAC\"}")
/*
{
  "origin": "test.tsx",
  "name": "Parent_component_div_onClick_C5XE49Nqd3A",
  "entry": null,
  "displayName": "Parent_component_div_onClick",
  "hash": "C5XE49Nqd3A",
  "canonicalFilename": "parent_component_div_onclick_c5xe49nqd3a",
  "extension": "js",
  "parent": "Parent_component_0TaiDayHrlo",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    419,
    446
  ]
}
*/
============================= child_component_9gyf01gdkqw.js ==

import { _fnSignal } from "@decoration/qwik";
import { _jsxQ } from "@decoration/qwik";
import { qrl } from "@decoration/qwik";
import { useServerMountQrl } from "@decoration/qwik";
import { useStore } from "@decoration/qwik";
export const Child_component_9GyF01GDKqw = ()=>{
    const state = useStore({
        text: ''
    });
    // Double count watch
    useServerMountQrl(/*#__PURE__*/ qrl(()=>import("./entry_server"), "Child_component_useServerMount_lnE1dxU8z28", [
        state
    ]));
    return /*#__PURE__*/ _jsxQ("div", null, {
        onClick$: /*#__PURE__*/ qrl(()=>import("./child_component_div_onclick_ellivsnaioq"), "Child_component_div_onClick_elliVSnAiOQ")
    }, _fnSignal((p0)=>p0.text, [
        state
    ], "p0.text"), 3, "u6_1");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;2CAuBgC,IAAM;IAClC,MAAM,QAAQ,SAAS;QACnB,MAAM;IACV;IAEA,qBAAqB;IACrB;;;IAIA,qBACI,MAAC;QAAI,QAAQ;uBACR,GAAM,IAAI;;;AAGvB\"}")
/*
{
  "origin": "test.tsx",
  "name": "Child_component_9GyF01GDKqw",
  "entry": "entry_Child",
  "displayName": "Child_component",
  "hash": "9GyF01GDKqw",
  "canonicalFilename": "child_component_9gyf01gdkqw",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    533,
    820
  ]
}
*/
============================= parent_component_useservermount_cqrqm0hrrm8.js ==

import { useLexicalScope } from "@decoration/qwik";
import mongo from "mongodb";
import redis from "redis";
export const Parent_component_useServerMount_cQrQm0HrrM8 = async ()=>{
    const [state] = useLexicalScope("Parent_component_useServerMount_cQrQm0HrrM8");
    state.text = await mongo.users();
    redis.set(state.text);
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;2DAWoB;;IACZ,MAAM,IAAI,GAAG,MAAM,MAAM,KAAK;IAC9B,MAAM,GAAG,CAAC,MAAM,IAAI\"}")
/*
{
  "origin": "test.tsx",
  "name": "Parent_component_useServerMount_cQrQm0HrrM8",
  "entry": "entry_server",
  "displayName": "Parent_component_useServerMount",
  "hash": "cQrQm0HrrM8",
  "canonicalFilename": "parent_component_useservermount_cqrqm0hrrm8",
  "extension": "js",
  "parent": "Parent_component_0TaiDayHrlo",
  "ctxKind": "function",
  "ctxName": "useServerMount$",
  "captures": true,
  "loc": [
    287,
    379
  ]
}
*/
============================= child_component_div_onclick_ellivsnaioq.js (ENTRY POINT)==

export const Child_component_div_onClick_elliVSnAiOQ = ()=>console.log('child');


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"uDAkCuB,IAAM,QAAQ,GAAG,CAAC\"}")
/*
{
  "origin": "test.tsx",
  "name": "Child_component_div_onClick_elliVSnAiOQ",
  "entry": null,
  "displayName": "Child_component_div_onClick",
  "hash": "elliVSnAiOQ",
  "canonicalFilename": "child_component_div_onclick_ellivsnaioq",
  "extension": "js",
  "parent": "Child_component_9GyF01GDKqw",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    743,
    769
  ]
}
*/
============================= entry_Child.js (ENTRY POINT)==

export { Child_component_9GyF01GDKqw } from "./child_component_9gyf01gdkqw";


None
============================= entry_Parent.js (ENTRY POINT)==

export { Parent_component_0TaiDayHrlo } from "./parent_component_0taidayhrlo";


None
============================= entry_server.js (ENTRY POINT)==

export { Child_component_useServerMount_lnE1dxU8z28 } from "./child_component_useservermount_lne1dxu8z28";
export { Parent_component_useServerMount_cQrQm0HrrM8 } from "./parent_component_useservermount_cqrqm0hrrm8";


None
== DIAGNOSTICS ==

[]
