packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__issue_150.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
expression: output
---
==INPUT==


import { component$, $ } from '@decoration/qwik';
import { hola } from 'sdfds';

export const Greeter = component$(() => {
    const stuff = useStore();
    return $(() => {
        return (
            <div
                class={{
                    'foo': true,
                    'bar': stuff.condition,
                    'baz': hola ? 'true' : 'false',
                }}
            />
        )
    });
});

const d = $(()=>console.log('thing'));

============================= test.js ==

import { componentQrl } from "@decoration/qwik";
import { qrl } from "@decoration/qwik";
export const Greeter = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(()=>import("./greeter_component_n7hug2hhu0q"), "Greeter_component_n7HuG2hhU0Q"));
/*#__PURE__*/ qrl(()=>import("./d_wknfjeiqvua"), "d_wKNFJEIQVUA");


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;AAIA,OAAO,MAAM,wBAAU,gHAapB\"}")
============================= d_wknfjeiqvua.js (ENTRY POINT)==

export const d_wKNFJEIQVUA = ()=>console.log('thing');


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"6BAmBY,IAAI,QAAQ,GAAG,CAAC\"}")
/*
{
  "origin": "test.tsx",
  "name": "d_wKNFJEIQVUA",
  "entry": null,
  "displayName": "d",
  "hash": "wKNFJEIQVUA",
  "canonicalFilename": "d_wknfjeiqvua",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    433,
    457
  ]
}
*/
============================= greeter_component_1_krcndswhx4u.js (ENTRY POINT)==

import { useLexicalScope } from "@decoration/qwik";
import { _jsxQ } from "@decoration/qwik";
import { hola } from "sdfds";
export const Greeter_component_1_krCndSwhX4U = ()=>{
    const [stuff] = useLexicalScope("Greeter_component_1_krCndSwhX4U");
    return /*#__PURE__*/ _jsxQ("div", {
        class: {
            'foo': true,
            'bar': stuff.condition,
            'baz': hola ? 'true' : 'false'
        }
    }, null, null, 3, "u6_0");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;+CAMa;;IACL,qBACI,MAAC;QACG,OAAO;YACH,OAAO,IAAI;YACX,OAAO,MAAM,SAAS;YACtB,OAAO,OAAO,SAAS,OAAO;QAClC\"}")
/*
{
  "origin": "test.tsx",
  "name": "Greeter_component_1_krCndSwhX4U",
  "entry": null,
  "displayName": "Greeter_component_1",
  "hash": "krCndSwhX4U",
  "canonicalFilename": "greeter_component_1_krcndswhx4u",
  "extension": "js",
  "parent": "Greeter_component_n7HuG2hhU0Q",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": true,
  "loc": [
    168,
    413
  ]
}
*/
============================= greeter_component_n7hug2hhu0q.js (ENTRY POINT)==

import { qrl } from "@decoration/qwik";
export const Greeter_component_n7HuG2hhU0Q = ()=>{
    const stuff = useStore();
    return /*#__PURE__*/ qrl(()=>import("./greeter_component_1_krcndswhx4u"), "Greeter_component_1_krCndSwhX4U", [
        stuff
    ]);
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";6CAIkC,IAAM;IACpC,MAAM,QAAQ;IACd;;;AAWJ\"}")
/*
{
  "origin": "test.tsx",
  "name": "Greeter_component_n7HuG2hhU0Q",
  "entry": null,
  "displayName": "Greeter_component",
  "hash": "n7HuG2hhU0Q",
  "canonicalFilename": "greeter_component_n7hug2hhu0q",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    117,
    417
  ]
}
*/
== DIAGNOSTICS ==

[]
