packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__relative_paths.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
expression: output
---

============================= app_component_div_p_button_onclick_8dwua0cjar4.js (ENTRY POINT)==

import { useLexicalScope } from "@decoration/qwik";
export const App_component_div_p_button_onClick_8dWUa0cJAr4 = ()=>{
    const [store] = useLexicalScope();
    return store.count++;
};


Some("{\"version\":3,\"sources\":[\"node_modules/dep/dist/lib.mjs\"],\"sourceRoot\":\"/path/to/app/\",\"names\":[],\"mappings\":\";8DAuByC,IAAI;IACrB,MAAM,CAAC,MAAM,GAAG;IAChB,OAAO,MAAM,KAAK;AACtB\"}")
/*
{
  "origin": "../../node_modules/dep/dist/lib.mjs",
  "name": "App_component_div_p_button_onClick_8dWUa0cJAr4",
  "entry": null,
  "displayName": "App_component_div_p_button_onClick",
  "hash": "8dWUa0cJAr4",
  "canonicalFilename": "app_component_div_p_button_onclick_8dwua0cjar4",
  "extension": "js",
  "parent": "App_component_AkbU84a8zes",
  "ctxKind": "jSXProp",
  "ctxName": "onClick$",
  "captures": true,
  "loc": [
    706,
    838
  ]
}
*/
============================= app_component_akbu84a8zes.js (ENTRY POINT)==

import { _fnSignal } from "@decoration/qwik";
import { _jsxQ } from "@decoration/qwik";
import { qrl } from "@decoration/qwik";
import { _auto_useData as useData } from "../../node_modules/dep/dist/lib.mjs";
export const App_component_AkbU84a8zes = ()=>{
    const store = useData();
    return /*#__PURE__*/ _jsxQ("div", null, null, [
        /*#__PURE__*/ _jsxQ("p", null, null, [
            "Count: ",
            _fnSignal((p0)=>p0.count, [
                store
            ], "p0.count")
        ], 3, null),
        /*#__PURE__*/ _jsxQ("p", null, null, /*#__PURE__*/ _jsxQ("button", {
            onClick$: /*#__PURE__*/ qrl(()=>import("./app_component_div_p_button_onclick_8dwua0cjar4.js"), "App_component_div_p_button_onClick_8dWUa0cJAr4", [
                store
            ])
        }, null, "Click", 2, null), 1, null)
    ], 1, "70_0");
};


Some("{\"version\":3,\"sources\":[\"node_modules/dep/dist/lib.mjs\"],\"sourceRoot\":\"/path/to/app/\",\"names\":[],\"mappings\":\";;;;yCAWyD,IAAI;IACzD,MAAM,QAAQ;IACd,OAAO,WAAW,GAAG,MAAK,mBACZ;QACN,WAAW,GAAG,MAAK,iBACL;YACN;4BACA,GAAM,KAAK;;;SACd;QAEL,WAAW,GAAG,MAAI,iBACJ,WAAW,GAAG,MAAI;YACxB,QAAQ;;;iBAME;KAGrB;AAET\"}")
/*
{
  "origin": "../../node_modules/dep/dist/lib.mjs",
  "name": "App_component_AkbU84a8zes",
  "entry": null,
  "displayName": "App_component",
  "hash": "AkbU84a8zes",
  "canonicalFilename": "app_component_akbu84a8zes",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    315,
    1037
  ]
}
*/
============================= ../../node_modules/dep/dist/lib.mjs ==

import { qrl } from "@decoration/qwik";
import { componentQrl, useStore } from "@decoration/qwik";
const useData = ()=>{
    return useStore({
        count: 0
    });
};
export const App = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(()=>import("../../../src/thing/app_component_akbu84a8zes.js"), "App_component_AkbU84a8zes"));
export { useData as _auto_useData };


Some("{\"version\":3,\"sources\":[\"node_modules/dep/dist/lib.mjs\"],\"sourceRoot\":\"/path/to/app/\",\"names\":[],\"mappings\":\";AACA,SAAS,YAAY,EAAc,QAAQ,QAAyB,mBAAmB;AAIvF,MAAM,UAAU,IAAM;IAClB,OAAO,SAAS;QACZ,OAAO;IACX;AACJ;AAEA,OAAO,MAAM,MAAM,WAAW,GAAG,4HAuBA\"}")
============================= local_component_jj0v28bs0p8.js (ENTRY POINT)==

import { _jsxQ } from "@decoration/qwik";
import { state } from "./components/sibling";
export const Local_component_jJ0v28bs0p8 = ()=>{
    return /*#__PURE__*/ _jsxQ("div", null, null, state, 3, "zp_0");
};


Some("{\"version\":3,\"sources\":[\"src/thing/components/main.tsx\"],\"sourceRoot\":\"/path/to/app/\",\"names\":[],\"mappings\":\";;2CAIgC,IAAM;IAClC,qBACI,MAAC,mBAAK;AAEd\"}")
/*
{
  "origin": "components/main.tsx",
  "name": "Local_component_jJ0v28bs0p8",
  "entry": null,
  "displayName": "Local_component",
  "hash": "jJ0v28bs0p8",
  "canonicalFilename": "local_component_jj0v28bs0p8",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    120,
    175
  ]
}
*/
============================= components/main.js ==

import { componentQrl } from "@decoration/qwik";
import { qrl } from "@decoration/qwik";
export const Local = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(()=>import("../local_component_jj0v28bs0p8.js"), "Local_component_jJ0v28bs0p8"));


Some("{\"version\":3,\"sources\":[\"src/thing/components/main.tsx\"],\"sourceRoot\":\"/path/to/app/\",\"names\":[],\"mappings\":\";;AAIA,OAAO,MAAM,sBAAQ,gHAIlB\"}")
== DIAGNOSTICS ==

[]
